prod-contents/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts (Business Hours)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>